# Fluke8846A-Controller

./: .env.example  .gitignore  LICENSE  README.md  UPDATES.md  pyproject.toml  requirements.txt  test_gui_mock_integration.py  test_instrument_mock.py  test_minimal_mock.py  test_mock_debug.py  test_simple_mock.py  test_tcp_integration.py
code_graph/: graph.dot
data/config/: settings.json
scripts/: test_cross_platform.py  test_mock.py
src/fluke8846a_app/: __init__.py  app.py  main.py
src/fluke8846a_app/communication/: __init__.py  base_adapter.py  connection_pool.py  gpib_adapter.py  mock_adapter.py  serial_adapter.py  tcp_adapter.py  usb_adapter.py  visa_manager.py
src/fluke8846a_app/config/: __init__.py  constants.py  paths.py  settings.py
src/fluke8846a_app/core/: __init__.py  commands.py  data_processor.py  instrument.py  measurements.py
src/fluke8846a_app/gui/: __init__.py  main_window.py
src/fluke8846a_app/gui/dialogs/: about_dialog.py  connection_dialog.py  settings_dialog.py
src/fluke8846a_app/gui/styles/: dark.qss  light.qss
src/fluke8846a_app/gui/widgets/: control_panel.py  measurement_panel.py  plot_widget.py  status_bar.py
src/fluke8846a_app/utils/: __init__.py  converters.py  helpers.py  logger.py  validators.py
